@@ -1,3 +1,11 @@
+2017-10-05 Riccardo Mottola <rm@gnu.org>
+
+	* DBHTMLWriter.h
+	* DBHTMLWriter.m
+	* DBCSVWriter.h
+	* DBCSVWriter.m
+	Provide file type constants.
+
 2017-10-03 Riccardo Mottola <rm@gnu.org>
 
 	* DBHTMLWriter.m
